# yt_summarizer

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/main/: admin.py  apps.py  mixins.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/main/management/commands/: test.py
apps/main/migrations/: 0001_initial.py  0002_alter_youtubevideo_channel.py  0003_youtubevideo_transcription_segments.py  0004_youtubevideo_chapters.py  0005_alter_youtubevideo_chapters_and_more.py
apps/main/summary/: anthropic.py  chapters.py  generic.py  llama.py  mistral.py  openai.py
apps/main/transcription/: openai.py  runpod_whisper.py  whisper.py
apps/main/voicening/: openai.py  tts.py
apps/runpod/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/runpod/migrations/: 0001_initial.py
apps/synthesizer/: admin.py  apps.py  models.py  tasks.py
apps/synthesizer/migrations/: 0001_initial.py
apps/telegram/: admin.py  bot.py  middlewares.py  models.py  tasks.py
apps/telegram/management/commands/: run_bot.py
apps/telegram/migrations/: 0001_initial.py  0002_telegramuser_updated_at_telegramvideo_and_more.py  0003_singlevideotosend.py  0004_telegramuser_enabled_and_more.py
prompts/: chapters_eng.txt  chapters_ru.txt  summary_eng.txt  summary_example.txt  summary_ru.txt
yt_summarizer/: asgi.py  settings.py  urls.py  wsgi.py
