[tool.poetry]
name = "summ"
version = "0.1.0"
description = ""
authors = ["Alex <aleks@fellow.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^5.0"
django-rq = "^2.9.0"
google-api-python-client = "^2.111.0"
openai-whisper = "^20231117"
psycopg = "^3.1.15"
transformers = "^4.36.2"
bitsandbytes = "^0.41.3.post2"
accelerate = "^0.25.0"
scipy = "^1.11.4"
openai = "^1.6.0"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"
tiktoken = "^0.5.2"
tts = "^0.22.0"
pytubefix = "^1.12.0"
aiogram = "^3.2.0"
rq-scheduler = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
