[tool.poetry]
name = "summ"
version = "0.1.0"
description = ""
authors = ["Alex Polev <apolevki09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "^5.0.6"
django-rq = "^2.10.2"
psycopg = {extras = ["binary"], version = "^3.1.19"}
openai = "^1.35.3"
python-dotenv = "^1.0.1"
nltk = "^3.8.1"
tiktoken = "^0.7.0"
pytubefix = "^5.6.3"
aiogram = "^3.8.0"
rq-scheduler = "^0.13.1"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
